--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                                         </p>
                                         <p class="pt-2 text-center">
-                                            &copy; 2019 Face Theme. All Rights Reserved
+                                            &copy; 2020 - Mikeke
                                         </p>
                                     </div>
                                 </div>
