--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.7s">
                                                 <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">0%</div>
                                             </div>
-                                            <h6>看番</h6>
+                                            <h6>看番 - (JOJO 1-3)</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.9s">
-                                              <div class="progress-bar" role="progressbar" style="width: 76%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">76%</div>
+                                              <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">55%</div>
+                                            </div>
+                                            <h6>飞车上分 - (钻2-车神)</h6>
+                                            <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.9s">
+                                              <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">星耀5</div>
                                             </div>
                                             <h6>零用钱剩余</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="1.2s">
@@ -114,7 +118,7 @@
                                                 </div>
                                                 <h5 class="pb-3">效率翻倍</h5>
                                                 <p>
-                                                    当感到疲惫时 利用睡觉来恢复动力
+                                                    当感到疲惫时 通过睡觉来恢复动力
                                                 </p>
                                             </div>
                                         </div>
