--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                         </div>
                                         <div class="col-sm-4 mt-2 wow fadeInUp">
                                             <img src="img/game_wangzhery_4.png" class="img-team img-fluid rounded-circle"/>
-                                            <h5 class="card-title pt-4">跑跑卡丁车手游</h5>
+                                            <h5 class="card-title pt-4">王者荣耀</h5>
                                             <p class="card-text">轻松掉分到白金</p>
                                         </div>
                                         <div class="col-sm-4 mt-2 wow fadeInRight">
