--- a/index.html
+++ b/index.html
@@ -64,38 +64,34 @@
                                     <div class="row">
                                         <div class="col-xs-12 wow fadeIn">
                                           <h2 class="text-white text-uppercase">晚上想法千千万 明天起床都不算</h2>
-                                          <p class="pt-4"> 暂且就先记录下这个月的进度吧</p>
+                                          <p class="pt-4"> zzZ（睡大觉）</p>
                                         </div>
                                     </div>
                                     <div class="row mt-4">
                                         <div class="col-lg-12 mt-2">
-                                            <h6>视频投稿 - (0/2)</h6>
+                                            <h6>1</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.1s">
                                                 <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">0%</div>
                                             </div>
-                                            <h6>AutoCAD</h6>
+                                            <h6>1</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.3s">
                                               <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">0%</div>
                                             </div>
-                                            <h6>Python</h6>
+                                            <h6>1</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.5s">
                                                 <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">0%</div>
                                             </div>
-                                            <h6>After Effects</h6>
+                                            <h6>1</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.7s">
                                                 <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">0%</div>
                                             </div>
-                                            <h6>看番 - (JOJO 1-3)</h6>
+                                            <h6>1</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.9s">
-                                              <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">55%</div>
+                                              <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">2</div>
                                             </div>
-                                            <h6>飞车上分 - (钻2-车神)</h6>
+                                            <h6>1</h6>
                                             <div class="progress mb-3 wow fadeInLeft" data-wow-delay="0.9s">
-                                              <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">星耀5</div>
-                                            </div>
-                                            <h6>零用钱剩余</h6>
-                                            <div class="progress mb-3 wow fadeInLeft" data-wow-delay="1.2s">
-                                                <div class="progress-bar bg-green" role="progressbar" style="width: 83%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">83%</div>
+                                              <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100">2</div>
                                             </div>
                                         </div>
                                     </div>
@@ -105,9 +101,9 @@
                                                 <div class="pb-3">
                                                     <em class="ion-refresh icon-md"></em>
                                                 </div>
-                                                <h5 class="pb-3">进度重置</h5>
+                                                <h5 class="pb-3">1</h5>
                                                 <p>
-                                                    当看番进度到达峰值 将自动归零
+                                                    1
                                                 </p>
                                             </div>
                                         </div>
@@ -116,9 +112,9 @@
                                                 <div class="pb-3">
                                                     <em class="ion-arrow-graph-up-right icon-md"></em>
                                                 </div>
-                                                <h5 class="pb-3">效率翻倍</h5>
+                                                <h5 class="pb-3">1</h5>
                                                 <p>
-                                                    当感到疲惫时 通过睡觉来恢复动力
+                                                    1
                                                 </p>
                                             </div>
                                         </div>
@@ -127,9 +123,9 @@
                                                 <div class="pb-3">
                                                     <em class="ion-ios-cloud-upload icon-md"></em>
                                                 </div>
-                                                <h5 class="pb-3">自动提交</h5>
+                                                <h5 class="pb-3">1</h5>
                                                 <p>
-                                                    当懒的打卡时 程序会自动帮我打卡
+                                                    1
                                                 </p>
                                             </div>
                                         </div>
@@ -153,8 +149,8 @@
                                     <div class="row d-md-flex mt-4 text-center">
                                         <div class="col-sm-4 mt-2 wow fadeIn">
                                             <img src="img/game_qqfc.png" class="img-team img-fluid rounded-circle"/>
-                                            <h5 class="card-title pt-4">QQ飞车手游</h5>
-                                            <p class="card-text">单天极速车神</p>
+                                            <h5 class="card-title pt-4">1</h5>
+                                            <p class="card-text">1</p>
                                         </div>
                                         <div class="col-sm-4 mt-2 wow fadeInUp">
                                             <img src="img/game_wangzhery_4.png" class="img-team img-fluid rounded-circle"/>
@@ -178,15 +174,15 @@
                                     <div class="row d-md-flex text-center wow fadeIn">
                                         <div class="col-sm-4">
                                             <img src="img/wechat.png" width="64" height="64" style="transform:scale(0.7)" />
-                                            <p class="lead">PolemoMu</p>
+                                            <p class="lead">云上半岛</p>
                                         </div>
                                         <div class="col-sm-4">
                                             <img src="img/qq.png" width="64" height="64" style="transform:scale(0.7)" />
-                                            <p class="lead">dy_keke@qq.com</p>
+                                            <p class="lead">@</p>
                                         </div>
                                         <div class="col-sm-4">
                                             <img src="img/bilibili.png" width="64" height="64" style="transform:scale(0.7)" />
-                                            <p class="lead">米可可_</p>
+                                            <p class="lead">云上半岛</p>
                                         </div>
                                     </div>
                                 </div>
