--- a/PcManager.html
+++ b/PcManager.html
@@ -104,7 +104,7 @@
               <div class="container-body___1dfBi">
                   <div class="body-info___4HV8W">
                       <div class="name___2I3vX">正在获取信息......</div>
-                      <div class="desc___AzvTg">正在运行: 获取中...</div>
+                      <div class="desc___AzvTg">正在运行: 获取中......</div>
                   </div>
                   <div class="container-contact___1diRs">
                       <div>
@@ -123,50 +123,51 @@
                     </div>
                   </div>
                   <div class="container-social___1Xykn">
-                      <!-- div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">控制台</div -->
-                      <div class="link_fortext___3sw_C">开机时间</div>
+                      <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">控制台</div>
+                      <div class="link_fortext___3sw_C">开关机时间</div>
                       <div class="social-link-wrapper___3bfXn cp___2jMmn">
                           <div class="social-link-icon-wrapper___1me36">
                               <img src="img/time-fill.png" />
                           </div>
                           <div class="social-link-title-wrapper___TdyY6">
-                              <div>开机时间: xx:xx:xx</div>
+                              <div>2022-09-18 14:21:20</div>
                           </div>
                       </div>
                       <div class="social-link-wrapper___3bfXn cp___2jMmn">
                           <div class="social-link-icon-wrapper___1me36">
-                              <img src="https://itg-tezign-files.tezign.com/sop/public/342/4331b2b30/bilibili.svg" />
+                              <img src="img/timer-fill.png" />
                           </div>
                           <div class="social-link-title-wrapper___TdyY6">
-                              <div>bilibili</div>
+                              <div>已运行 114 分钟</div>
+                          </div>
+                      </div>
+                      <div class="link_fortext___3sw_C">状态</div>
+                      <div class="social-link-wrapper___3bfXn cp___2jMmn">
+                          <div class="social-link-icon-wrapper___1me36">
+                              <img src="img/shield-check-line.png" />
+                          </div>
+                          <div class="social-link-title-wrapper___TdyY6">
+                              <div>已锁定</div>
                           </div>
                       </div>
                       <div class="social-link-wrapper___3bfXn cp___2jMmn">
                           <div class="social-link-icon-wrapper___1me36">
-                              <img src="https://itg-tezign-files.tezign.com/sop/public/342/4331b2b30/GitHub.svg" />
+                              <img src="img/shield-check-line.png" />
                           </div>
                           <div class="social-link-title-wrapper___TdyY6">
-                              <div>Github</div>
+                              <div>无留言</div>
                           </div>
                       </div>
+                      <div class="link_fortext___3sw_C">附加功能</div>
                       <div class="social-link-wrapper___3bfXn cp___2jMmn">
                           <div class="social-link-icon-wrapper___1me36">
-                              <img src="https://itg-tezign-files.tezign.com/sop/public/342/053091914/yuque.svg" />
+                              <img src="img/shield-check-line.png" />
                           </div>
                           <div class="social-link-title-wrapper___TdyY6">
-                              <div>语雀</div>
-                          </div>
-                      </div>
-                      <div class="link_fortext___3sw_C">往期视频</div>
-                      <div class="social-link-wrapper___3bfXn cp___2jMmn">
-                          <div class="social-link-icon-wrapper___1me36">
-                              <img src="https://itg-tezign-files.tezign.com/sop/public/342/4331b2b30/bilibili.svg" />
-                          </div>
-                          <div class="social-link-title-wrapper___TdyY6">
-                              <div>奇妙冒险</div>
+                              <div>每30分钟锁定15分钟</div>
                           </div>
                           <div class="social-link-icon-expand___1NZxj">
-                              <img src="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/public/expandIcon.svg" />
+                              <img src="img/shield-check-line.png" />
                           </div>
                       </div>
                       <div class="social_link_video_cintainer___3J3fp" style="height:;overflow:"></div>
@@ -272,6 +273,41 @@
       }
     </script>
     <script src="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/umi.js"></scrip -->
-  
+  <script>
+    function ajax(opt) {
+        opt = opt || {};
+        opt.method = opt.method.toUpperCase() || 'POST';
+        opt.url = opt.url || '';
+        opt.async = opt.async || true;
+        opt.data = opt.data || null;
+        opt.success = opt.success || function () {};
+        var xmlHttp = null;
+        if (XMLHttpRequest) {
+            xmlHttp = new XMLHttpRequest();
+        }
+        else {
+            xmlHttp = new ActiveXObject('Microsoft.XMLHTTP');
+        }var params = [];
+        for (var key in opt.data){
+            params.push(key + '=' + opt.data[key]);
+        }
+        var postData = params.join('&');
+        if (opt.method.toUpperCase() === 'POST') {
+            xmlHttp.open(opt.method, opt.url, opt.async);
+            xmlHttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded;charset=utf-8');
+            xmlHttp.send(postData);
+        }
+        else if (opt.method.toUpperCase() === 'GET') {
+            xmlHttp.open(opt.method, opt.url + '?' + postData, opt.async);
+            xmlHttp.send(null);
+        } 
+        xmlHttp.onreadystatechange = function () {
+            if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
+                opt.success(JSON.parse( xmlHttp.responseText));//如果不是json数据可以去掉json转换
+            }
+        };
+    }
+
+  </script>
 
 </body></html>
