fix bug about no bug
修复了没有BUG的BUG

--- a/PcManager.html
+++ b/PcManager.html
@@ -54,7 +54,7 @@
             box-sizing: border-box;
         }
     </style>
-    <link rel="stylesheet" href="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/umi.css">
+    <link rel="stylesheet" href="./css/umi.css">
     <script>
         window.routerBase = "/";
     </script>
@@ -88,19 +88,19 @@
         <div class="container default-container___3JmVU">
             <div class="container_bg_warp___2nsIX" style="position:fixed;height:100%">
                 <img
-                    src="https://itg-tezign-files.tezign.com/sop/public/muselink/avatar/203282923/b04153b9-3d39-4e20-9c42-ed943ac74463.jpg" />
+                    src="./img/b04153b9-3d39-4e20-9c42-ed943ac74463.jpg" />
             </div>
             <div class="container-layout___eJ83N">
                 <div class="container-head-bg___1sJpz">
                     <div class="muselink-icon-warp___1ovTA">
                         <img class="muselink-icon-first___3ywzK muselink-icon___10ldM"
-                            src="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/public/muse-link.svg" />
+                            src="./img/muse-link.svg" />
                         <img class="muselink-icon___10ldM"
-                            src="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/public/muse-link.svg" />
+                            src="./img/muse-link.svg" />
                     </div>
                     <div class="arrow-icon-warp___3u8Ns">
                         <img class="arrow-icon___1L8BD"
-                            src="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/public/arrow.svg" />
+                            src="./img/arrow.svg" />
                     </div>
                 </div>
                 <div class="container-body___1dfBi">
