--- a/PcManager.html
+++ b/PcManager.html
@@ -105,8 +105,8 @@
                 </div>
                 <div class="container-body___1dfBi">
                     <div class="body-info___4HV8W">
-                        <div class="name___2I3vX">正在获取信息......</div>
-                        <div class="desc___AzvTg">正在运行: 获取中......</div>
+                        <div id="titleStatus" class="name___2I3vX">正在获取信息......</div>
+                        <div id="titleLastExe" class="desc___AzvTg">正在运行: 获取中......</div>
                     </div>
                     <div class="container-contact___1diRs">
                         <div>
@@ -132,7 +132,7 @@
                                 <img src="img/time-fill.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div>1960-01-01 00:00:00</div>
+                                <div id="textBootTime">时间信息......</div>
                             </div>
                         </div>
                         <div class="social-link-wrapper___3bfXn cp___2jMmn">
@@ -140,7 +140,7 @@
                                 <img src="img/timer-fill.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div>已运行 0 分钟</div>
+                                <div id="textRunTime">已运行 ... 分钟</div>
                             </div>
                         </div>
                         <div class="link_fortext___3sw_C">状态</div>
@@ -149,7 +149,7 @@
                                 <img src="img/shield-check-line.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div>已锁定</div>
+                                <div id="textLockStatus">锁定状态......</div>
                             </div>
                         </div>
                         <div class="social-link-wrapper___3bfXn cp___2jMmn">
@@ -157,7 +157,7 @@
                                 <img src="img/shield-check-line.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div>无留言</div>
+                                <div id="textMessage">留言信息......</div>
                             </div>
                         </div>
                         <div class="link_fortext___3sw_C">附加功能</div>
@@ -166,7 +166,7 @@
                                 <img src="img/shield-check-line.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div>每30分钟锁定10分钟</div>
+                                <div>每30分钟锁定10分钟 (暂不可用)</div>
                             </div>
                             <div class="social-link-icon-expand___1NZxj">
                                 <img src="img/shield-check-line.svg" />
