--- a/PcManagerVip.html
+++ b/PcManagerVip.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="container-social___1Xykn">
-                        <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">控制台</div>
+                        <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">VIP控制台</div>
                         <div class="link_fortext___3sw_C">开关机时间</div>
                         <div id="startTimeButton" class="social-link-wrapper___3bfXn cp___2jMmn time">
                             <div class="social-link-icon-wrapper___1me36">
@@ -143,7 +143,7 @@
                                 <div id="textRunTime">已运行 ... 分钟</div>
                             </div>
                         </div>
-                        <div class="link_fortext___3sw_C">状态</div>
+                        <div class="link_fortext___3sw_C">状态 - 点击切换</div>
                         <div id="btnLockStatus" class="social-link-wrapper___3bfXn cp___2jMmn">
                             <div class="social-link-icon-wrapper___1me36">
                                 <img src="img/shield-check-line.svg" />
@@ -284,7 +284,7 @@
       }
     </script>
     <script src="https://itg-tezign-files.tezign.com/sop/public/muselink/dark/1663314936261/umi.js"></scrip -->
-<script src="js/pcmanager.js"></script>
+<script src="js/pcmanagerVip.js"></script>
 
 </body>
 
