--- a/PcManager.html
+++ b/PcManager.html
@@ -126,6 +126,14 @@
                     </div>
                     <div class="container-social___1Xykn">
                         <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">控制台</div>
+                        <div id="getVipButton" class="social-link-wrapper___3bfXn cp___2jMmn time">
+                            <div class="social-link-icon-wrapper___1me36">
+                                <img src="img/time-fill.svg" />
+                            </div>
+                            <div class="social-link-title-wrapper___TdyY6">
+                                <div id="textGetVip">开通超级VIP</div>
+                            </div>
+                        </div>
                         <div class="link_fortext___3sw_C">开关机时间</div>
                         <div id="startTimeButton" class="social-link-wrapper___3bfXn cp___2jMmn time">
                             <div class="social-link-icon-wrapper___1me36">
