--- a/PcManagerVip.html
+++ b/PcManagerVip.html
@@ -87,20 +87,16 @@
     <div id="root">
         <div class="container default-container___3JmVU">
             <div class="container_bg_warp___2nsIX" style="position:fixed;height:100%">
-                <img
-                    src="./img/b04153b9-3d39-4e20-9c42-ed943ac74463.jpg" />
+                <img src="./img/b04153b9-3d39-4e20-9c42-ed943ac74463.jpg" />
             </div>
             <div class="container-layout___eJ83N">
                 <div class="container-head-bg___1sJpz">
                     <div class="muselink-icon-warp___1ovTA">
-                        <img class="muselink-icon-first___3ywzK muselink-icon___10ldM"
-                            src="./img/muse-link.svg" />
-                        <img class="muselink-icon___10ldM"
-                            src="./img/muse-link.svg" />
+                        <img class="muselink-icon-first___3ywzK muselink-icon___10ldM" src="./img/muse-link.svg" />
+                        <img class="muselink-icon___10ldM" src="./img/muse-link.svg" />
                     </div>
                     <div class="arrow-icon-warp___3u8Ns">
-                        <img class="arrow-icon___1L8BD"
-                            src="./img/arrow.svg" />
+                        <img class="arrow-icon___1L8BD" src="./img/arrow.svg" />
                     </div>
                 </div>
                 <div class="container-body___1dfBi">
@@ -126,6 +122,14 @@
                     </div>
                     <div class="container-social___1Xykn">
                         <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">VIP控制台</div>
+                        <div id="btnOffline" class="social-link-wrapper___3bfXn cp___2jMmn time">
+                            <div class="social-link-icon-wrapper___1me36">
+                                <img src="img/time-fill.svg" />
+                            </div>
+                            <div class="social-link-title-wrapper___TdyY6">
+                                <div id="textBootTime">离线验证码模式 (新)</div>
+                            </div>
+                        </div>
                         <div class="link_fortext___3sw_C">开关机时间</div>
                         <div id="startTimeButton" class="social-link-wrapper___3bfXn cp___2jMmn time">
                             <div class="social-link-icon-wrapper___1me36">
