offline bug fix and add cheat in novip

--- a/PcManagerVip.html
+++ b/PcManagerVip.html
@@ -127,7 +127,7 @@
                                 <img src="img/time-fill.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div id="textBootTime">离线验证码模式 (新)</div>
+                                <div id="text">离线验证码模式 (新)</div>
                             </div>
                         </div>
                         <div class="link_fortext___3sw_C">开关机时间</div>
