--- a/PcManager.html
+++ b/PcManager.html
@@ -126,12 +126,12 @@
                     </div>
                     <div class="container-social___1Xykn">
                         <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">控制台</div>
-                        <div id="btnOffline" class="social-link-wrapper___3bfXn cp___2jMmn time">
+                        <div id="btnLockOffline" class="social-link-wrapper___3bfXn cp___2jMmn time">
                             <div class="social-link-icon-wrapper___1me36">
                                 <img src="img/time-fill.svg" />
                             </div>
                             <div class="social-link-title-wrapper___TdyY6">
-                                <div id="text">离线验证码模式 (新)</div>
+                                <div id="textLockOffline">离线验证码模式 (新)</div>
                             </div>
                         </div>
                         <div id="getVipButton" class="social-link-wrapper___3bfXn cp___2jMmn time">
