--- a/PcManagerVip.html
+++ b/PcManagerVip.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="container-social___1Xykn">
                         <div class="link_fortext___3sw_C link_fortext_isHeavier___3euox">VIP控制台</div>
-                        <div id="btnOffline" class="social-link-wrapper___3bfXn cp___2jMmn time">
+                        <div id="btnLockOffline" class="social-link-wrapper___3bfXn cp___2jMmn time">
                             <div class="social-link-icon-wrapper___1me36">
                                 <img src="img/time-fill.svg" />
                             </div>
