fix bug press 0

--- a/PcManagerOffline.html
+++ b/PcManagerOffline.html
@@ -84,7 +84,7 @@
         <span class="num" onclick="document.calc.txt.value+='3'">3</span>
         <span class="num" onclick="document.calc.txt.value+='2'">2</span>
         <span class="num" onclick="document.calc.txt.value+='1'">1</span>
-        <span class="num" onclick="operation(this)">0</span>
+        <span class="num" onclick="document.calc.txt.value+='0'">0</span>
         <!--
         <span class="num" onclick="operation(this)">00</span>
         <span class="num" onclick="operation(this)">.</span>
