--- a/PcManagerVip.html
+++ b/PcManagerVip.html
@@ -5,8 +5,7 @@
     <title data-react-helmet="true"></title>
     <meta charset="utf-8">
     <script src="js/jquery.js"></script>
-
-
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <style>
         html {
