--- a/PcManager.html
+++ b/PcManager.html
@@ -5,7 +5,6 @@
     <title data-react-helmet="true"></title>
     <meta charset="utf-8">
     <script src="js/jquery.js"></script>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <style>
         html {
@@ -86,20 +85,16 @@
     <div id="root">
         <div class="container default-container___3JmVU">
             <div class="container_bg_warp___2nsIX" style="position:fixed;height:100%">
-                <img
-                    src="./img/b04153b9-3d39-4e20-9c42-ed943ac74463.jpg" />
+                <img src="./img/b04153b9-3d39-4e20-9c42-ed943ac74463.jpg" />
             </div>
             <div class="container-layout___eJ83N">
                 <div class="container-head-bg___1sJpz">
                     <div class="muselink-icon-warp___1ovTA">
-                        <img class="muselink-icon-first___3ywzK muselink-icon___10ldM"
-                            src="./img/muse-link.svg" />
-                        <img class="muselink-icon___10ldM"
-                            src="./img/muse-link.svg" />
+                        <img class="muselink-icon-first___3ywzK muselink-icon___10ldM" src="./img/muse-link.svg" />
+                        <img class="muselink-icon___10ldM" src="./img/muse-link.svg" />
                     </div>
                     <div class="arrow-icon-warp___3u8Ns">
-                        <img class="arrow-icon___1L8BD"
-                            src="./img/arrow.svg" />
+                        <img class="arrow-icon___1L8BD" src="./img/arrow.svg" />
                     </div>
                 </div>
                 <div class="container-body___1dfBi">
