--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             <span id="timejishiqi"></span>
         </div>
         <!-- 小板块 -->
-        <!--
+        
         <div id="box">
+            <!--
             <div class="smallbox" id="sb1">
                 <a href="photo.php">
                     <img src="img/photos.svg" class="icon" draggable="false">
@@ -49,8 +50,15 @@
                     视频
                 </a>
             </div>
+            -->
+            <div class="smallbox" id="sb4">
+                <a href="video.html">
+                    <img src="img/camera.svg" class="icon" draggable="false">
+                    视频
+                </a>
+            </div>
         </div>
-        -->
+        
     </div>
 
     <script>
