--- a/native.html
+++ b/native.html
@@ -133,6 +133,7 @@
       form.insertAdjacentElement('afterend', newForm);
 
       // 复制结果文本到剪贴板
+      /*
       if (navigator.clipboard) {
         navigator.clipboard.writeText(resultElem.textContent).then(() => {
           console.log('复制成功');
@@ -145,6 +146,24 @@
         console.log('不支持复制！');
         alert('浏览器不支持复制')
       }
+      */
+
+      const resultText = resultElem.textContent;
+      // 创建一个临时文本元素
+      const tempElem = document.createElement('textarea');
+      tempElem.value = resultText;
+      document.body.appendChild(tempElem);
+
+      // 将临时文本元素中的文本复制到剪贴板中
+      tempElem.select();
+      document.execCommand('copy');
+
+      // 在不需要时移除临时元素
+      document.body.removeChild(tempElem);
+
+      // 显示提示信息
+      alert('已复制');
+
 
     });
   </script>
