--- a/native.html
+++ b/native.html
@@ -109,19 +109,19 @@
       // 创建新结果元素
       const resultElem = document.createElement('div');
       resultElem.innerHTML = `
-              <p>熙地地native专柜</p>
-              <p>${today}</p>
-              <p>今日目标：${input1Value}</p>
-              <p>今日销售：${input2Value}</p>
-              <p>今日达成率：${(saleRate * 100).toFixed(2)}%</p>
-              <p>销售笔数：${input3Value}</p>
-              <p>销售件数：${input4Value}</p>
-              <p>串联：${(combineRate * 100).toFixed(2)}%</p>
-              <p>销售总件数：${input5Value}</p>
-              <p>月销售累计金额：${input6Value}</p>
-              <p>个人业绩</p>
-              <p>依凡：${input7Value} 累计：${input8Value}</p>
-              <p>浩浩：${input9Value} 累计：${input10Value}</p>
+<p>熙地港native专柜</p>
+<p>${today}</p>
+<p>今日目标：${input1Value}</p>
+<p>今日销售：${input2Value}</p>
+<p>今日达成率：${(saleRate * 100).toFixed(2)}%</p>
+<p>销售笔数：${input3Value}</p>
+<p>销售件数：${input4Value}</p>
+<p>串联：${(combineRate * 100).toFixed(2)}%</p>
+<p>销售总件数：${input5Value}</p>
+<p>月销售累计金额：${input6Value}</p>
+<p>个人业绩</p>
+<p>依凡：${input7Value} 累计：${input8Value}</p>
+<p>浩浩：${input9Value} 累计：${input10Value}</p>
             `;
 
       // 将结果元素添加到新表单元素中
@@ -171,3 +171,5 @@
 </body>
 
 </html>
+
+
