--- a/native.html
+++ b/native.html
@@ -50,6 +50,17 @@
     .form+.form {
       margin-top: 20px;
     }
+
+    .container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 
@@ -57,7 +68,7 @@
 
   <div class="container">
     <form class="form">
-      <h2 style="text-align: center;">无聊产物v0.2</h2>
+      <h2 style="text-align: center;">无聊产物v0.3</h2>
       <input type="text" id="input-1" placeholder="今日目标">
       <input type="text" id="input-2" placeholder="今日销量">
       <input type="text" id="input-3" placeholder="销售笔数">
@@ -171,5 +182,3 @@
 </body>
 
 </html>
-
-
