--- a/native.html
+++ b/native.html
@@ -61,6 +61,17 @@
       justify-content: center;
       align-items: center;
     }
+
+    .form {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 
